--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 <!DOCTYPE html>
 
 <html lang="en">
@@ -10,6 +10,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>About Me</title>
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<link rel="stylesheet" href="styles.css">
 
 </head>
 
@@ -31,7 +35,9 @@
 
 </header>
 
-<main>
+<main class="container my-5>
+
+    <h2>About Me</h2>
 
 <p>Hi! I'm a beginner web developer learning how to use GitHub Pages.</p>
 
@@ -46,55 +52,9 @@
 
 </footer>
 
-</body>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 
-=======
-<!DOCTYPE html>
-
-<html lang="en">
-
-<head>
-
-<meta charset="UTF-8">
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<title>About Me</title>
-
-</head>
-
-<body>
-
-<header>
-
-<h1>About Me</h1>
-
-<nav>
-
-<a href="index.html">Home</a> |
-
-<a href="about.html">About</a> |
-
-<a href="contact.html">Contact</a>
-
-</nav>
-
-</header>
-
-<main>
-
-<p>Hi! I'm a beginner web developer learning how to use GitHub Pages.</p>
-
-<p>This is my first multi-page website, and I'm excited to share it with you!</p>
-
-</main>
-
-
-<footer>
-
-<p>&copy; 2023 Your Name</p>
-
-</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 
 </body>
 
