--- a/contact.html
+++ b/contact.html
@@ -10,54 +10,9 @@
 
 <title>Contact Me</title>
 
-</head>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
-<body>
-
-<header>
-
-<h1>Contact Me</h1>
-
-<nav>
-
-<a href="index.html">Home</a> |
-
-<a href="about.html">About</a> |
-
-<a href="contact.html">Contact</a>
-
-</nav>
-
-</header>
-
-
-<main>
-
-<p>If you'd like to get in touch, feel free to email me at <a href="mailto:example@example.com">example@example.com</a>.</p>
-
-</main>
-
-
-<footer>
-
-<p>&copy; 2025 Your Name</p>
-
-</footer>
-
-</body>
-
-</html>
-<!DOCTYPE html>
-
-<html lang="en">
-
-<head>
-
-<meta charset="UTF-8">
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<title>Contact Me</title>
+<link rel="stylesheet" href="styles.css">
 
 </head>
 
@@ -80,9 +35,14 @@
 </header>
 
 
-<main>
+<main class="container my-5>
+    <h2>About Me</h2>
 
-<p>If you'd like to get in touch, feel free to email me at <a href="mailto:example@example.com">example@example.com</a>.</p>
+<p>Hi! I'm a beginner web developer learning how to use GitHub Pages.</p>
+
+<p>This is my first multi-page website, and I'm excited to share it with you!</p>
+
+<p>If you'd like to get in touch, feel free to email me at <a href="bida25-091@thuto.bac.ac.bw">bida25-091@thuto.bac.ac.bw</a>.</p>
 
 </main>
 
@@ -92,6 +52,11 @@
 <p>&copy; 2025 Your Name</p>
 
 </footer>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+
 
 </body>
 
