--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 
+    </main>
+
+    <p>&copy; 2025 Yolanda</p>
+
 </body>
 
 </html>
