--- a/about.html
+++ b/about.html
@@ -21,27 +21,51 @@
 
 <header>
 
-<h1>About Me</h1>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-<nav>
+<p class="navbar-logo" href="index.html">DECOI</p>
 
-<a href="index.html">Home</a> |
+<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
 
-<a href="about.html">About</a> |
+<span class="navbar-toggler-icon"></span>
 
-<a href="contact.html">Contact</a>
+</button>
+
+<div class="collapse navbar-collapse" id="navbarNav">
+
+<ul class="navbar-nav">
+
+<li class="nav-item">
+
+<a class="nav-link" href="index-1.html">Home</a>
+
+</li>
+
+<li class="nav-item">
+
+<a class="nav-link" href="about.html">About</a>
+
+</li>
+
+<li class="nav-item">
+
+<a class="nav-link" href="contact.html">Contact</a>
+
+</li>
+
+</ul>
+
+</div>
+
 
 </nav>
+
 
 </header>
 
 <main class="container my-5>
 
-    <h2>About Me</h2>
-
-<p>Hi! I'm a beginner web developer learning how to use GitHub Pages.</p>
-
-<p>This is my first multi-page website, and I'm excited to share it with you!</p>
+    
 
 </main>
 
