--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-<div class="container">
-
-<a class="navbar-brand" href="index.html">My Website</a>
+<p class="navbar-logo" href="index.html">DECOI</p>
 
 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
 
@@ -37,7 +35,7 @@
 
 <li class="nav-item">
 
-<a class="nav-link" href="index.html">Home</a>
+<a class="nav-link" href="index-1-1.html">Home</a>
 
 </li>
 
@@ -57,62 +55,47 @@
 
 </div>
 
-</div>
 
 </nav>
 
-</header>
-
     </header>
 
-    <main class="container my-5">
+    <main>
+        <div class="intro">
+        <h2>Welcome To</h2>
+<p>Decoi,  your destination for modern, effortless style. <br>We create clothing that blends comfort, quality, and standout design, made to elevate your everyday wardrobe.</p>
+<p>Discover curated pieces crafted with attention to detail, premium materials, and a focus on timeless versatility. Whether you're dressing up, keeping it casual, or expressing your individuality, Decoi brings you fashion that feels as good as it looks</p>
+<p>Explore the latest drops, find your signature style, and make a statement with Decoi. Your new favorites start here.</p>
+        </div>
 
-<div class="row">
+<div class="two-column">
+    <p>Please feel free to contact us using the contact button below. <a href="contact.html" class="contact-btn">CONTACT US</a></p>
 
-<div class="col-md-8">
+    <div class="image-gallery">
+    <img src="OIP (1).webp" alt="" width="200px" height="200px">
+<img src="OIP (2).webp" alt="" width="200px" height="200px">
+<img src="OIP (3).webp" alt="" width="200px" height="200px">
+<img src="OIP.webp" alt="" width="200px" height="200px">
+    </div>
 
-<h2>Welcome to My Website!</h2>
-
-<p>This is a simple webpage hosted on GitHub Pages.</p>
-
-<p>Here's a picture of a cute cat:</p>
-
-<img src="striped-grey-kitten.webp" height="200" width="300" alt="A cute kitten" class="img-fluid rounded">
-
-<p class="mt-3">Visit <a href="https://github.com" class="btn btn-primary">GitHub</a> to learn more about coding.</p>
-
-</div>
-
-<div class="col-md-4">
-
-<div class="card">
-
-<div class="card-body">
-
-<h5 class="card-title">Did You Know?</h5>
-
-<p class="card-text">GitHub Pages is a free service to host static websites directly from your GitHub repository.</p>
+  <a class="contact-btn" href="#">CONTACT US</a>
 
 </div>
 
-</div>
-
-</div>
-
-</div>
-
-
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-
+<a href="#">CONTACT US</a>
     </main>
+
+      
 
 <footer>
 
     <p>&copy; 2025 Yolanda</p>
 
 </footer>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 
 </body>
 
