--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 
 <li class="nav-item">
 
-<a class="nav-link" href="index-1.html">Home</a>
+<a class="nav-link" href="index.html">Home</a>
 
 </li>
 
