--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <li class="nav-item">
 
-<a class="nav-link" href="index-1-1.html">Home</a>
+<a class="nav-link" href="index.html">Home</a>
 
 </li>
 
@@ -82,7 +82,7 @@
 
 </div>
 
-<a href="#">CONTACT US</a>
+<a href="contact.html">CONTACT US</a>
     </main>
 
       
