--- a/contact.html
+++ b/contact.html
@@ -20,15 +20,44 @@
 
 <header>
 
-<h1>Contact Me</h1>
+<header>
 
-<nav>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-<a href="index.html">Home</a> |
+<p class="navbar-logo" href="index.html">DECOI</p>
 
-<a href="about.html">About</a> |
+<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
 
-<a href="contact.html">Contact</a>
+<span class="navbar-toggler-icon"></span>
+
+</button>
+
+<div class="collapse navbar-collapse" id="navbarNav">
+
+<ul class="navbar-nav">
+
+<li class="nav-item">
+
+<a class="nav-link" href="index.html">Home</a>
+
+</li>
+
+<li class="nav-item">
+
+<a class="nav-link" href="about.html">About</a>
+
+</li>
+
+<li class="nav-item">
+
+<a class="nav-link" href="contact.html">Contact</a>
+
+</li>
+
+</ul>
+
+</div>
+
 
 </nav>
 
